--- a/TaskLive/package.json
+++ b/TaskLive/package.json
@@ -21,6 +21,14 @@
         "react-dom": "^18.2.0",
         "tailwindcss": "^3.2.1",
         "typescript": "^5.0.2",
-        "vite": "^5.0"
+        "vite": "^5.0",
+        "vite-plugin-svgr": "^4.2.0"
+    },
+    "dependencies": {
+        "@fortawesome/fontawesome-svg-core": "^6.5.2",
+        "@fortawesome/free-brands-svg-icons": "^6.5.2",
+        "@fortawesome/free-regular-svg-icons": "^6.5.2",
+        "@fortawesome/free-solid-svg-icons": "^6.5.2",
+        "@fortawesome/react-fontawesome": "^0.2.0"
     }
 }
